// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`global/components/search/button when it is active matches the snapshot 1`] = `
<button
  aria-expanded={true}
  aria-haspopup={true}
  className="button-search button-active"
  data-id="toggle-menu"
  onClick={[Function]}
>
  <IconComposer
    fill="currentColor"
    icon="search24"
    iconClass="search-icon"
    size={32}
    svgProps={
      Object {
        "aria-hidden": true,
      }
    }
  />
  <span
    className="screen-reader-text"
  >
    Search
  </span>
</button>
`;

exports[`global/components/search/button when it isn't active matches the snapshot 1`] = `
<button
  aria-expanded={false}
  aria-haspopup={true}
  className="button-search"
  data-id="toggle-menu"
  onClick={[Function]}
>
  <IconComposer
    fill="currentColor"
    icon="search24"
    iconClass="search-icon"
    size={32}
    svgProps={
      Object {
        "aria-hidden": true,
      }
    }
  />
  <span
    className="screen-reader-text"
  >
    Search
  </span>
</button>
`;
